P1, Order management finished, tests begun
