# microservices/order-management/src/main/openapi/product-management-1.0.yml
@@ -38,20 +38,20 @@ paths:
     put:
       tags:
       - Products
-      operationId: calculateOrder
+      operationId: priceOrder
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/OrderRequestDTO"
+              $ref: "#/components/schemas/OrderPriceRequestDTO"
         required: true
       responses:
         "200":
-          description: calculateOrder 200 response
+          description: priceOrder 200 response
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/OrderResponseDTO"
+                $ref: "#/components/schemas/OrderPriceResponseDTO"
   /products/{id}:
     get:
       tags:
@@ -111,7 +111,7 @@ paths:
           description: deleteProduct 200 response
 components:
   schemas:
-    OrderRequestDTO:
+    OrderPriceRequestDTO:
       type: object
       properties:
         productQuantities:
@@ -119,7 +119,7 @@ components:
           additionalProperties:
             type: integer
             format: int64
-    OrderResponseDTO:
+    OrderPriceResponseDTO:
       type: object
       properties:
         productPrices:
